# ocr-digit-recognition-platform

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ocr_platform/: __init__.py  api.py  cli.py  config.py  model.py  preprocessing.py  schemas.py  service.py
tests/: test_preprocessing.py
