[project]
name = "ocr-digit-recognition-platform"
version = "1.0.0"
description = "Production-ready OCR digit recognition API and CLI using OpenCV KNN."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0", "mypy>=1.10.0", "bandit>=1.7.8"]

[project.scripts]
ocr-platform = "ocr_platform.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
